# stock-api

./: .gitignore  AGENTS.md  API_DOCUMENTATION.md  README.md  pyproject.toml
app/: __init__.py  main.py  schemas.py  ticker_universe.py
app/api/v1/: backtests.py  intelligence.py  markets.py  screener.py  (+1 more)
app/core/: config.py
app/services/: __init__.py  bank_valuation.py  breakout_analysis.py  breakout_config.py  breakout_confluence.py  breakout_detection.py  indicators.py  market_data.py  market_symbols.py  owner_earnings_valuation.py  reit_valuation.py  screener.py  sec_companyfacts.py  technicals.py  timeframes.py  tradingview_provider.py  valuation.py  valuation_fundamentals.py  valuation_math.py  valuation_router.py  valuation_service.py  valuation_types.py  yfinance_analysis.py  yfinance_client.py  yfinance_fundamentals.py  yfinance_statements.py
docs/: breakout-trend-confluence.md
tests/: test_api.py  test_bank_valuation.py  test_breakout_analysis.py  test_breakout_confluence.py  test_breakout_detection.py  test_breakout_screener.py  test_indicators.py  test_live_breakout.py  test_live_tradingview.py  test_live_valuation.py  test_market_data.py  test_market_symbols.py  test_owner_earnings_valuation.py  test_reit_valuation.py  test_sec_companyfacts.py  test_technicals.py  test_ticker_universe.py  test_timeframes.py  test_tradingview_provider.py  test_valuation.py  test_valuation_documentation.py  test_valuation_fundamentals.py  test_valuation_math.py  test_valuation_router.py  test_valuation_service.py  test_yfinance_analysis.py  test_yfinance_client.py  test_yfinance_fundamentals.py  test_yfinance_statements.py
tests/fixtures/: breakout_bars.py
(+10 files in other folders)
