[project]
name = "stock-api"
version = "0.1.0"
description = "FastAPI stock valuation API powered by yFinance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.3.0",
    "fastapi>=0.111.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that call live yFinance data and may be slow or network-dependent",
]
