[project]
name = "stock-api"
version = "0.1.0"
description = "FastAPI trading intelligence API powered by TradingView MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "tradingview-mcp-server @ git+https://github.com/atilaahmettaner/tradingview-mcp.git@546dc2a2e65b6ea8083a3c45a689f6e399a1df08",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: opt-in tests that call network-dependent providers and may be slow",
]
